WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133673
Turning on DUMP_PROPERTYMAP_STATS causes a build failure
https://bugs.webkit.org/show_bug.cgi?id=133673
Summary
Turning on DUMP_PROPERTYMAP_STATS causes a build failure
Ryosuke Niwa
Reported
2014-06-09 22:06:25 PDT
Add a bunch of stuff to make it buildable again.
Attachments
Fixes the build failure
(8.97 KB, patch)
2014-06-09 22:26 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixes the bug
(10.89 KB, patch)
2014-06-10 18:01 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2014-06-09 22:26:26 PDT
Created
attachment 232768
[details]
Fixes the build failure
WebKit Commit Bot
Comment 2
2014-06-09 22:27:28 PDT
Attachment 232768
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/Structure.cpp:815: Extra space before ) [whitespace/parens] [2] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2014-06-10 13:18:00 PDT
Comment on
attachment 232768
[details]
Fixes the build failure This code counts collisions and rehashes the same. :|
Ryosuke Niwa
Comment 4
2014-06-10 18:01:36 PDT
Created
attachment 232838
[details]
Fixes the bug
WebKit Commit Bot
Comment 5
2014-06-10 18:03:30 PDT
Attachment 232838
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/Structure.cpp:818: Extra space before ) [whitespace/parens] [2] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 6
2014-06-11 13:22:01 PDT
Comment on
attachment 232838
[details]
Fixes the bug Clearing flags on attachment: 232838 Committed
r169824
: <
http://trac.webkit.org/changeset/169824
>
Ryosuke Niwa
Comment 7
2014-06-11 13:22:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug